Fix bug where teminal log grows too high when loading screen is visible and you type in a lot of text

--- a/client/src/styles.css
+++ b/client/src/styles.css
@@ -111,6 +111,7 @@ body {
   padding: 0 10px 20px;
   flex-grow: 1;
   overflow-y: scroll;
+  height: 98px; /* Prevents container from growing too high when loading screen is visible. */ 
 }
 
 .commandInstance {
